2009-12-10  Geoff Norton  <gnorton@novell.com>

	* RemoteSoftDebuggerSession.cs: Only redirect the output when
	asked to do so.

2009-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Hide abstract properties. There is
	  nothing we can do with them.

2009-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Convert StructMirrors of type IntPtr
	  to real IntPtr objects.

2009-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Add support for external console.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* RemoteSoftDebuggerSession.cs: Add an OnConnected virtual
	  method that subclasses can use to hook into when the app is
	  successfully started.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Pass isError to OnTargetOutput.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* RemoteSoftDebuggerSession.cs: Add a fallback to try to kill
	  hung debugger processes.

2009-12-04  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: When pausing and picking a frame to
	  display, pick one with user code.

2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2009-12-03  Lluis Sanchez Gual  <lluis@novell.com>

	* FieldValueReference.cs:
	* SoftDebuggerAdaptor.cs:
	* PropertyValueReference.cs: Allow modifying field values on
	  structs. Track api changes.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugger.Soft.dll: Updated, fixes debugger keeping 
	  socket open after cancellation.
	* Mono.Debugger.Soft.dll.mdb:
	* Makefile.am: Include the debugger mdb file.

2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
